[package]
name = "itsdns"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Light weight DNS client based on embedded-nal-async"
repository = "https://github.com/lulf/itsdns"
categories = [
    "embedded",
    "no-std",
    "dns",
    "net",
]

[dependencies]
embedded-nal-async = "0.4.0"
heapless = "0.7"

[dev-dependencies]
embedded-io = { version = "0.4.0", features = ["async", "std"] }
tokio = { version = "1.21", features = ["full"] }
std-embedded-nal-async = { git = "https://gitlab.com/lulf/std-embedded-nal.git", rev = "590f1433f26d0318799316ed0b213f6febd48d7c" }
